# LaboratoryWorksInfa

./: .gitignore  CMakeLists.txt  LW1.cpp  LW2.cpp  LW2_alt.cpp  LW3.cpp  LW3.cpp'  README.md
exam-2/: CMakeLists.txt  main.cpp  matrix-2.txt
first-prac/: CMakeLists.txt  LW1.cpp  LW1_ex.cpp  main.cpp  run_tests.sh
first-prac/data/: test0.txt
first-prac/tests/: test0.txt
first-sem/: CMakeLists.txt  LW1.cpp  LW3.cpp
first-sem/tests/: test4.txt  test5.txt  test7.txt  test8.txt  test9.txt
fourth-sem/: CMakeLists.txt
fourth-sem/OOP-Ilin/: CMakeLists.txt
fourth-sem/OOP-Ilin/LW0/: CMakeLists.txt  card.cpp  card.h  card_virt.cpp  card_virt.h  location.cpp  location.h  main.cpp  main_virt.cpp  point.cpp  point.h  point_virt.cpp  point_virt.h
fourth-sem/OOP-Romanov/: CMakeLists.txt  readme
results/sorted (asc)/: 1000.txt  10000.txt  5.txt  500.txt  50000.txt
results/sorted (desc)/: 1000.txt  10000.txt  5.txt  500.txt  50000.txt
second-sem/: CMakeLists.txt
second-sem/LW2/: CMakeLists.txt  LW2-arrays.cpp  LW2-pointers.cpp  run_tests.sh
second-sem/LW2/lw2-arrays/: helpers.cpp  helpers.h  main.cpp  tasks.cpp  tasks.h
second-sem/LW2/lw2-pointers/: helpers.cpp  helpers.h  main.cpp  tasks.cpp  tasks.h
second-sem/LW2/tests/: 15_waited_matrix_amount_2_real_amount_1.txt  16_expected_h_and_w_not_match_with_real.txt  17_excess_data.txt  22_without_negativ.txt  23_with_uneven_and_negativ-a.txt  23_with_uneven_and_negativ-b.txt  23_with_uneven_and_negativ.txt  24_without_uneven-a.txt  24_without_uneven-b.txt  24_without_uneven.txt
third-sem/: CMakeLists.txt
(+129 files in other folders)
